[package]
name = "observrs"
version = "0.0.1"
edition = "2021"
description = "Application designed for fast synthetic monitoring with global deployment capabilities with a comprehensive approach"
homepage = "https://observrs.com"
repository = "https://github.com/wiggels/observrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
