[package]
name = "observrs"
version = "0.0.1"
authors = ["Hunter Wigelsworth <wiggels@gmail.com>"]
edition = "2021"
description = "Application designed for fast synthetic monitoring with global deployment capabilities with a comprehensive approach"
homepage = "https://observrs.com"
repository = "https://github.com/wiggels/observrs"
license = "MIT"

[dependencies]
